[package]
name = "HealthDashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"                                    # Framework web async más moderno
tokio = { version = "1.40", features = ["full"] }  # Runtime async

# Kubernetes
kube = { version = "0.95", features = ["runtime", "derive"] }  # Cliente de K8s
k8s-openapi = { version = "0.23", features = ["v1_31"] }       # Tipos de K8s

# Serialización
serde = { version = "1.0", features = ["derive"] }  # Para JSON/YAML
serde_json = "1.0"                                  # Específico para JSON

# Utilidades
anyhow = "1.0"                                       # Manejo de errores simplificado
tracing = "0.1"                                      # Sistema de logs estructurado
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Para logs
tower = "0.5"                                        # Middleware framework
tower-http = { version = "0.6", features = ["cors", "trace"] }      # HTTP middleware
